--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ flutter:
   assets:
    - assets/background/orion.jpg
    - assets/logo/orionlogo.png
+   - assets/group.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
