Add model for institution, courses and disciplines as well as json examples

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ flutter:
    - assets/background/orion.jpg
    - assets/logo/orionlogo.png
    - assets/icons/group.pdf
+   - assets/json/groups.json
+   - assets/json/institution.json
+   - assets/json/classes.json
+   - assets/json/courses.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
