--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   autocomplete_textfield: ^1.7.3
   http: ^0.12.0
+  provider: ^2.0.0
   
 dev_dependencies:
   flutter_test:
