Add splash screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   autocomplete_textfield: ^1.7.3
   http: ^0.12.0
   provider: ^2.0.0
+  splashscreen: ^1.2.0
   
 dev_dependencies:
   flutter_test:
@@ -47,6 +48,7 @@ flutter:
   assets:
    - assets/background/orion.jpg
    - assets/logo/orionlogo.png
+   - assets/logo/orion_logo.png
    - assets/icons/group.pdf
    - assets/json/groups.json
    - assets/json/institution.json
