--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   http: ^0.12.0
   provider: ^2.0.0
   splashscreen: ^1.2.0
+  intl: ^0.16.0
   
 dev_dependencies:
   flutter_test:
