--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   provider: ^2.0.0
   splashscreen: ^1.2.0
   intl: ^0.16.0
+  file_picker: ^1.4.2
   
 dev_dependencies:
   flutter_test:
