--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   splashscreen: ^1.2.0
   intl: ^0.16.0
   file_picker: ^1.4.2
+  path_provider: ^1.3.1
   
 dev_dependencies:
   flutter_test:
