--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,18 @@ dependencies:
   intl: ^0.16.0
   file_picker: ^1.4.2
   path_provider: ^1.3.1
-  
+  uni_links: ^0.2.0
+  share: ^0.6.3
+  flutter_launcher_icons: ^0.6.1
+
+flutter_icons:
+  image_path: "assets/icon.png"
+  android: true
+  ios: true
+
+dependency_overrides:
+  image: 2.0.7
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
