--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   uni_links: ^0.2.0
   share: ^0.6.3
   flutter_launcher_icons: ^0.6.1
+  shared_preferences: "0.5.4"
 
 flutter_icons:
   image_path: "assets/icon.png"
@@ -60,6 +61,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+   - assets/icon.png
    - assets/background/orion.jpg
    - assets/logo/orionlogo.png
    - assets/logo/orion_logo.png
