--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_launcher_icons: ^0.6.1
   shared_preferences: "0.5.4"
   url_launcher: '^5.2.5'
+  page_transition: "^1.1.5"
 
 flutter_icons:
   android: true
